--- a/keylogweb/src/main/resources/templates/home.html
+++ b/keylogweb/src/main/resources/templates/home.html
@@ -11,11 +11,12 @@
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
 
 
+
     <script>
         $(document).ready(function() {
             $('#example').DataTable({
                 "order": [
-                    [ 3, 'desc' ]
+                    [ 1, 'asc' ]
                 ]
             });
         } );
@@ -25,6 +26,7 @@
 
         <thead>
         <tr>
+            <th scope="col">Id</th>
             <th scope="col">UUID</th>
             <th scope="col">Accessibility Event</th>
             <th scope="col">Message</th>
@@ -34,6 +36,7 @@
         <tbody>
 
         <tr th:each="keyLog: ${keyLogList}">
+            <td th:text="${keyLog.id}"/>
             <td th:text="${keyLog.uuid}"/>
             <td th:text="${keyLog.accessibilityEvent}"/>
             <td th:text="${keyLog.msg}"/>
